2017-02-09  Alex Christensen  <achristensen@webkit.org>

        Unreviewed, rolling out r212040.

        Broke build.  I'm not surprised

        Reverted changeset:

        "[WebRTC][Mac] Activate libwebrtc"
        https://bugs.webkit.org/show_bug.cgi?id=167293
        http://trac.webkit.org/changeset/212040

2017-02-09  Chris Dumez  <cdumez@apple.com>

        [Mac][WK2] Use MIME type to add file extension to downloads' suggested filenames when missing
        https://bugs.webkit.org/show_bug.cgi?id=168077
        <rdar://problem/30412595>

        Reviewed by Alex Christensen.

        Use MIME type to add file extension to downloads' suggested filenames when missing:
        - https://html.spec.whatwg.org/#as-a-download (step 19)

        This new behavior matches Chrome.

        * NetworkProcess/Downloads/BlobDownloadClient.cpp:
        (WebKit::BlobDownloadClient::didReceiveResponseAsync):
        * NetworkProcess/Downloads/Download.cpp:
        (WebKit::Download::didReceiveResponse):
        (WebKit::Download::decideDestinationWithSuggestedFilename):
        * NetworkProcess/Downloads/Download.h:
        * NetworkProcess/NetworkProcess.cpp:
        (WebKit::NetworkProcess::findPendingDownloadLocation):
        * UIProcess/Downloads/DownloadProxy.cpp:
        (WebKit::DownloadProxy::didStart):
        (WebKit::DownloadProxy::decideDestinationWithSuggestedFilename):
        * UIProcess/Downloads/DownloadProxy.h:
        * UIProcess/Downloads/DownloadProxy.messages.in:

2017-02-09  Youenn Fablet  <youenn@apple.com>

        [WebRTC][Mac] Activate libwebrtc
        https://bugs.webkit.org/show_bug.cgi?id=167293

        Reviewed by Alex Christensen.

        * Shared/WebPreferencesDefinitions.h:

2017-02-09  Alex Christensen  <achristensen@webkit.org>

        Fix libwebrtc build on case-sensitive file systems.

        * WebProcess/Network/webrtc/WebRTCMonitor.cpp:

2017-02-09  Alex Christensen  <achristensen@webkit.org>

        Fix CMake build.
