@@ -1,3 +1,11 @@
+2017-02-09  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        Unreviewed. Fix GTK+ build with threaded compositor disabled.
+
+        * WebProcess/WebPage/AcceleratedDrawingArea.cpp:
+        (WebKit::AcceleratedDrawingArea::enterAcceleratedCompositingMode):
+        (WebKit::AcceleratedDrawingArea::exitAcceleratedCompositingModeNow):
+
 2017-02-09  Alex Christensen  <achristensen@webkit.org>
 
         Unreviewed, rolling out r212040.
